# Lottery

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  get_train_data.py  pyproject.toml  requirements.txt  taskfile.yaml  train_model.py
config/: config.toml.example
data_collect/: download_train_data.py
data_train/: config.py  model.py  train_model.py
docs/: 01_quickstart.md  02_cli.md  03_config.md  04_architecture.md  05_data_pipeline.md  06_training.md  07_modules.md  08_conventions.md  09_roadmap.md  README.md
input/: 2020-06-02.csv
src/: config.py  data.py  download_train_data.py  model.py  model_blue_ball.py  model_red_ball.py  train.py  train_blue_ball.py  train_red_ball.py
src/lottery/: __init__.py
src/lottery/cli/: __init__.py  data.py  main.py
src/lottery/config/: __init__.py  loader.py
src/lottery/data/: __init__.py  dataset.py  loader.py  parser.py  repository.py
src/lottery/domain/: __init__.py  types.py
src/lottery/inference/: __init__.py  loader.py  predictor.py  saver.py
src/lottery/models/: __init__.py  lstm.py
src/lottery/training/: saver.py  trainer.py
src/lottery_api/: __init__.py  __main__.py  app.py  schemas.py  service.py  static_files.py
src/lottery_api/business/: __init__.py  prediction_service.py
src/lottery_api/data/: __init__.py  draw_repository.py
src/lottery_api/handlers/: __init__.py  routes.py
src/lottery_data/: __init__.py  duckdb_connection.py  duckdb_queries.py  duckdb_repository.py  models.py  repository.py
src/lottery_train/: __init__.py
src/lottery_train/cli/: data.py  (+1 more)
src/lottery_web/: package.json  vite.config.ts
static/: index.html
static/assets/: index-BICA7zL6.css  index-C4D_hPvh.js
test/: data.ipynb
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+34 files in other folders)
