[project]
name = "lottery"
version = "0.1.0"
description = "双色球历史数据实验项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "torch>=2.12.0",
    "tensorboard>=2.15.0",
    "fastapi[standard]>=0.136.3",
    "duckdb>=1.5.3",
]


[[tool.uv.index]]
name = "pytorch-windows-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-linux-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-windows-cu130", marker = "sys_platform == 'win32'" },
    # { index = "pytorch-linux-cpu", marker = "sys_platform == 'linux'" },
]

[tool.uv]
package = true

[project.scripts]
lottery = "lottery.cli:main"
lottery-api = "lottery_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lottery", "src/lottery_api", "src/lottery_data"]
